# web-server

./: .gitignore  CMakeLists.txt  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  NetServer.cpp  NetServer.h  main.cpp  pub.cpp  pub.h  utils.cpp  wrap.cpp  wrap.h
webapp/: 404.html  index.html
webapp/test/: 1.html  王.html
